--- a/pom.xml
+++ b/pom.xml
@@ -161,7 +161,8 @@
                 <java>DOUBLESLASH_STYLE</java>
               </mapping>
               <includes>
-                <include>**/*.java</include>
+                <include>src/main/java/**/*.java</include>
+                <include>src/test/java/**/*.java</include>
               </includes>
               <excludes>
               </excludes>
