--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up cache for ~./m2/repository
-        uses: actions/cache@v2.1.1
+        uses: actions/cache@v2.1.6
         with:
           path: ~/.m2/repository
           key: maven-${{ matrix.os }}-java${{ matrix.java }}-${{ hashFiles('**/pom.xml') }}
@@ -26,7 +26,7 @@ jobs:
             maven-${{ matrix.os }}-java${{ matrix.java }}-
             maven-${{ matrix.os }}-
 
-      - uses: actions/cache@v2
+      - uses: actions/cache@v2.1.6
         with:
           path: ~/.mvn/wrapper
           key: ${{ matrix.os }}-maven-wrapper-${{ hashFiles('**/.mvn/wrapper/maven-wrapper.properties') }}
@@ -37,7 +37,7 @@ jobs:
           java-version: ${{ matrix.java }}
 
       - name: Build with Maven
-        run: ./mvnw clean install -e -B -V -fae "-Dmaven.test.failure.ignore=true"
+        run: ./mvnw clean install -e -B -V -fae
         env:
           GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
 
