--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
           java-version: ${{ matrix.java }}
 
       - name: Build with Maven
-        run: ./mvnw clean install -DGITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} -e -B -V -fae
+        run: ./mvnw clean install -e -B -V -fae
         env:
           GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
 
