--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
       <version>1.2.3</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.eclipse.jgit</groupId>
+      <artifactId>org.eclipse.jgit</artifactId>
+      <version>5.9.0.202009080501-r</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -148,6 +154,7 @@
       <plugin>
         <groupId>com.mycila</groupId>
         <artifactId>license-maven-plugin</artifactId>
+        <version>4.1</version>
         <inherited>false</inherited>
         <configuration>
           <failIfMissing>true</failIfMissing>
