--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest ]
-        java: [ 11 ]
+        java: [ 11, 17 ]
       fail-fast: false
 
     runs-on: ${{ matrix.os }}
@@ -17,13 +17,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: actions/cache@v2.1.6
-        with:
-          path: ~/.mvn/wrapper
-          key: ${{ matrix.os }}-maven-wrapper-${{ hashFiles('**/.mvn/wrapper/maven-wrapper.properties') }}
-
       - name: Set up JDK
-        uses: actions/setup-java@v2.3.1
+        uses: actions/setup-java@v2.4.0
         with:
           distribution: 'temurin'
           java-version: ${{ matrix.java }}
